# golio/generate/schema/http/go/openapi/model__media_post_200_response.go
@@ -1,0 +1,37 @@
+/*
+ * My Project
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+
+
+
+type MediaPost200Response struct {
+
+	UploadPresignedUrl string `json:"upload_presigned_url"`
+}
+
+// AssertMediaPost200ResponseRequired checks if the required fields are not zero-ed
+func AssertMediaPost200ResponseRequired(obj MediaPost200Response) error {
+	elements := map[string]interface{}{
+		"upload_presigned_url": obj.UploadPresignedUrl,
+	}
+	for name, el := range elements {
+		if isZero := IsZeroValue(el); isZero {
+			return &RequiredError{Field: name}
+		}
+	}
+
+	return nil
+}
+
+// AssertMediaPost200ResponseConstraints checks if the values respects the defined constraints
+func AssertMediaPost200ResponseConstraints(obj MediaPost200Response) error {
+	return nil
+}
